TPP, Waits, Images
Several issues were combined here.

1. Accessing the Petulant Poetess site now works.

2. An attempt was made to make image download more robust but experience shows it has little to no effect.

3. AO3 was complaining about bots so waits between pages were increased to a maximum of 75 seconds.